<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.redpanther14.protoproject.MainActivity"
    android:background="@android:color/darker_gray">


    <Button
        android:text="@string/gui_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStart"
        android:background="@android:color/holo_green_dark"
        android:layout_alignLeft="@+id/buttonStop"
        android:layout_alignStart="@+id/buttonStop"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="visible" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerSensorValue2"
        android:layout_below="@+id/textViewAccelerometerZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:text="@string/textViewProximitySensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProximitySensor"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/buttonSettings"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/gui_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStop"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:layout_below="@+id/buttonStart"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/gui_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSettings"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/buttonStop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProximitySensorValue"
        android:textSize="24sp"
        tools:layout_width="wrap_content"
        tools:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/textViewAccelerometerY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerY"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/textViewAccelerometerX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/textViewAccelerometerX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerX"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/textViewProximitySensorValue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerSensorValue"
        android:layout_below="@+id/textViewAccelerometerX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerSensorValue1"
        android:layout_below="@+id/textViewAccelerometerY"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:text="@string/textViewAccelerometerZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAccelerometerZ"
        android:layout_below="@+id/textViewAccelerometerSensorValue1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:text="@string/online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/checkBox"
        android:enabled="false" />

</RelativeLayout>
