<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity"
    android:background="@android:color/darker_gray">

    <TextView
        android:text="@string/gui_first_sensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:id="@+id/textView"
        android:layout_below="@+id/textViewFrequency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gui_first_sensor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:id="@+id/textViewFirstSensor"
        android:layout_below="@+id/textViewFrequency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gui_second_sensor_valueX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSecondSensorX"
        android:layout_below="@+id/textViewFirstSensor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewFrequency"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/spinner"
        android:layout_above="@+id/textViewFirstSensor"
        android:layout_alignRight="@+id/textViewSecondSensorX"
        android:layout_alignEnd="@+id/textViewSecondSensorX" />

    <TextView
        android:text="@string/gui_sampling_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFrequency"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10000"
        android:progress="1"
        android:layout_marginTop="16dp"
        android:id="@+id/seekBarSamplingRate"
        android:layout_below="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="1"
        android:layout_below="@+id/textViewFirstSensor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/seekBarFirstSensor"
        android:layout_toLeftOf="@+id/textViewFirstSensorValue"
        android:layout_toStartOf="@+id/textViewFirstSensorValue" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="1"
        android:layout_below="@+id/textViewSecondSensorX"
        android:layout_marginTop="14dp"
        android:id="@+id/seekBarSecondSensorX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewFirstSensorValue"
        android:layout_alignEnd="@+id/textViewFirstSensorValue" />

    <Button
        android:text="@string/gui_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSaveData"
        android:background="@android:color/holo_blue_bright"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gui_second_sensor_valueY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarSecondSensorX"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:id="@+id/textViewSecondSensorY"
        android:layout_alignRight="@+id/seekBarSecondSensorX"
        android:layout_alignEnd="@+id/seekBarSecondSensorX" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSecondSensorY"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/seekBarSecondSensorY"
        android:max="20"
        android:progress="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/gui_second_sensor_valueZ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBarSecondSensorY"
        android:layout_marginTop="21dp"
        android:id="@+id/textViewSecondSensorZ"
        android:layout_toLeftOf="@+id/textViewSecondSensorValueX"
        android:layout_toStartOf="@+id/textViewSecondSensorValueX" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSecondSensorZ"
        android:layout_marginTop="16dp"
        android:id="@+id/seekBarSecondSensorZ"
        android:max="20"
        android:progress="1"
        android:layout_alignRight="@+id/textViewFirstSensorValue"
        android:layout_alignEnd="@+id/textViewFirstSensorValue" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSecondSensorValueZ"
        android:layout_above="@+id/seekBarSecondSensorZ"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/textViewSecondSensorValueY"
        android:layout_alignStart="@+id/textViewSecondSensorValueY" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|number"
        android:text="Mosquito IP"
        android:ems="10"
        android:id="@+id/plainTextMosquitoIP"
        android:layout_below="@+id/seekBarSecondSensorZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textViewsamplingRateValue"
        android:layout_alignEnd="@+id/textViewsamplingRateValue" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/switchAutomaticMode"
        android:checked="false"
        android:splitTrack="false"
        android:text="Automatic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewsamplingRateValue"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewFrequency"
        android:layout_toEndOf="@+id/textViewFrequency"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="Mosquito Port"
        android:ems="10"
        android:id="@+id/plainTextMosquitoPort"
        android:layout_below="@+id/seekBarSecondSensorZ"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSecondSensorValueY"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textViewSecondSensorY"
        android:layout_alignBottom="@+id/textViewSecondSensorY"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSecondSensorValueX"
        android:textSize="18sp"
        android:layout_alignTop="@+id/textViewSecondSensorX"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewFirstSensorValue"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
